# msp430fr2x5x-hal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  debug.sh  memory.x  mspdebug.gdb  run.bat  run.sh
.cargo/: config
.github/workflows/: build.yml
device-examples/msp430fr2355/: Cargo.toml  debug.sh
device-examples/msp430fr2355/.cargo/: config.toml
device-examples/msp430fr2355/examples/: adc.rs  adc_temp_sensor.rs  alternate.rs  backup_memory.rs  blinky.rs  capture.rs  capture_intr.rs  clocks.rs  comparator.rs  crc.rs  defmt.rs  echo.rs  gpio.rs  gpio_interrupts.rs  i2c_master.rs  i2c_multiple_masters.rs  i2c_nb.rs  i2c_slave_interrupt.rs  info_memory.rs  loopback.rs  lpm0.rs  lpm0_msrv.rs  lpm3_5.rs  lpm4_5.rs  pwm.rs  rtc.rs  sac_amplifier.rs  sac_dac.rs  sac_opamp.rs  spi_bus.rs  spi_nb.rs  spi_slave_interrupt.rs  timer.rs  watchdog.rs
device-examples/msp430fr2433/: Cargo.toml  memory.x
device-examples/msp430fr2433/.cargo/: config.toml
device-examples/msp430fr2433/examples/: adc.rs  adc_temp_sensor.rs  blinky.rs  crc.rs  i2c_master.rs  info_memory.rs  pwm.rs  spi_blocking.rs  uart_echo.rs  watchdog.rs
device-examples/msp430fr2476/: Cargo.toml  memory.x  run.sh  temp_commands.txt
device-examples/msp430fr2476/.cargo/: config.toml
device-examples/msp430fr2476/examples/: adc.rs  adc_temp_sensor.rs  alternate.rs  backup_memory.rs  blinky.rs  capture.rs  capture_intr.rs  clocks.rs  comparator.rs  crc.rs  echo.rs  echo_remapped.rs  gpio.rs  gpio_interrupts.rs  i2c_master.rs  i2c_nb.rs  info_memory.rs  loopback.rs  lpm0.rs  lpm0_msrv.rs  lpm3_5.rs  lpm4_5.rs  pwm.rs  rainbow_led.rs  rtc.rs  spi_bus.rs  spi_nb.rs  spi_slave_interrupt.rs  timer.rs  watchdog.rs
docs/: ecomp_images.drawio
examples/: adc.rs  adc_temp_sensor.rs  alternate.rs  backup_memory.rs  blinky.rs  capture.rs  capture_intr.rs  clocks.rs  comparator.rs  crc.rs  echo.rs  gpio.rs  gpio_interrupts.rs  i2c.rs  i2c_master.rs  i2c_multiple_masters.rs  i2c_nb.rs  i2c_slave_interrupt.rs  info_memory.rs  loopback.rs  lpm0.rs  lpm0_msrv.rs  lpm3_5.rs  lpm4_5.rs  pwm.rs  rtc.rs  sac_amplifier.rs  sac_dac.rs  sac_opamp.rs  spi.rs  spi_bus.rs  spi_bus_nb.rs  spi_device.rs  spi_nb.rs  spi_slave_interrupt.rs  timer.rs  watchdog.rs
hal/: Cargo.toml
hal/docs/: sac_images.drawio
hal/src/: adc.rs  bak_mem.rs  batch_gpio.rs  capture.rs  clock.rs  device_specific.rs  ecomp.rs  gpio.rs  i2c.rs  info_mem.rs  lib.rs  lpm.rs  pin_mapping.rs  pmm.rs  pwm.rs  rtc.rs  sac_l3.rs  serial.rs  spi.rs  timer.rs  watchdog.rs
hal/src/device_specific/: fr2433.rs  fr247x.rs  fr2x5x.rs
hal/src/hw_traits/: ecomp.rs  eusci.rs  gpio.rs  sac.rs  timer_a.rs  timer_base.rs
src/: adc.rs  bak_mem.rs  batch_gpio.rs  bits.rs  capture.rs  clock.rs  crc.rs  delay.rs  ecomp.rs  fram.rs  gpio.rs  hw_traits.rs  i2c.rs  info_mem.rs  lib.rs  lpm.rs  pmm.rs  prelude.rs  pwm.rs  rtc.rs  sac.rs  sac_l3.rs  serial.rs  spi.rs  timer.rs  util.rs  watchdog.rs
src/device_specific/: fr2x5x.rs
src/hw_traits/: ecomp.rs  eusci.rs  gpio.rs  sac.rs  timer_b.rs  timer_base.rs  timerb.rs
