[package]
name = "msp430fr2x5x-hal"
version = "0.3.3"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
edition = "2018"
description = "Implementation of embedded-hal for microcontrollers MSP430FR2355, MSP430FR2353, MSP430FR2153 and MSP430FR2155"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YuhanLiin/msp430fr2x5x-hal"
keywords = ["no-std", "msp430", "ti", "launchpad", "embedded-hal"]
documentation = "https://docs.rs/msp430fr2x5x-hal"

[dependencies]
msp430 = "0.4.0"
nb = "0.1.3"
void = { version = "1.0.2", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
msp430fr2355 = { version = "0.5.2", features = ["rt", "critical-section"] }

[dev-dependencies]
panic-msp430 = "0.4.0"
panic-never = "0.1.0"
msp430-rt = "0.4.0"
critical-section = "1.0.0"
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = "s"
codegen-units = 1
debug = true

[profile.dev.package."*"]
opt-level = "z"
