[package]
name = "msp430fr2x5x-hal"
version = "0.4.1"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
edition = "2018"
description = "Implementation of embedded-hal for microcontrollers MSP430FR2355, MSP430FR2353, MSP430FR2153 and MSP430FR2155"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YuhanLiin/msp430fr2x5x-hal"
keywords = ["no-std", "msp430", "ti", "launchpad", "embedded-hal"]
documentation = "https://docs.rs/msp430fr2x5x-hal"

[features]
default = []
embedded-hal-02 = ["dep:embedded-hal-02", "dep:void"]

[dependencies]
msp430 = "0.4.0"
nb = "1.1"
void = { version = "1.0.2", default-features = false, optional = true }
embedded-hal-02 = { package = 'embedded-hal', version = "0.2.7", features = ["unproven"], optional = true }
embedded-hal = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-io = "0.6"
msp430fr2355 = { version = "0.5.2", features = ["rt", "critical-section"] }

[dev-dependencies]
panic-msp430 = "0.4.0"
panic-never = "0.1.0"
msp430-rt = "0.4.0"
critical-section = "1.0.0"
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = "s"
codegen-units = 1
debug = true

[profile.dev.package."*"]
opt-level = "z"

[package.metadata.docs.rs]
targets = ["msp430-none-elf"]
cargo-args = ["-Z", "build-std=core"]
