[package]
name = "msp430fr2x5x-hal"
version = "0.6.1"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>, RossPorter506 <rossporter506@gmail.com>"]
edition = "2018"
description = "Implementation of embedded-hal for microcontrollers MSP430FR2355, MSP430FR2353, MSP430FR2153 and MSP430FR2155"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YuhanLiin/msp430fr2x5x-hal"
keywords = ["no-std", "msp430", "ti", "launchpad", "embedded-hal"]
documentation = "https://docs.rs/msp430fr2x5x-hal"
readme = "../README.md"

[features]
default = []
embedded-hal-02 = ["dep:embedded-hal-02", "dep:void"]

# Device features. Provide exactly one of these.
msp430fr2355 = ["2x5x", "sac_l3"] # 32kB FRAM + SAC unit
msp430fr2353 = ["2x5x", "sac_l3"] # 16kB FRAM + SAC unit
msp430fr2155 = ["2x5x"]           # 32kB FRAM
msp430fr2153 = ["2x5x"]           # 16kB FRAM
msp430fr2433 = ["dep:msp430fr2433", "eusci_modclk", "adc", "adcpctl", "eusci_b", "info_mem"]

# Derived features. Do not provide these.
2x5x = ["dep:msp430fr2355", "eusci_aclk", "info_mem", "enhanced_ref", "adc12bit", "ecomp", "eusci_b"]
eusci_aclk = [] # eUSCI peripherals can source from ACLK
eusci_modclk = [] # eUSCI peripherals can source from MODCLK
adc12bit = ["adc"]
adcpctl = [] # ADC functionality controlled via ADCPCTLx
adc = []
ecomp = []
enhanced_ref = []
eusci_b = []
sac_l3 = ["sac"]
sac_l1 = ["sac"]
sac = []
tia = []
info_mem = []

[dependencies]
msp430 = "0.4.0"
msp430fr2355 = { version = "0.6", features = ["rt", "critical-section"], optional = true }
msp430fr2433 = { version = "0.2", features = ["rt", "critical-section"], optional = true }
nb = "1.1"
void = { version = "1.0.2", default-features = false, optional = true }
embedded-hal-02 = { package = 'embedded-hal', version = "0.2.7", features = ["unproven"], optional = true }
embedded-hal = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-io = "0.6"
bitflags = "2.9"

[dev-dependencies]
panic-msp430 = "0.4.0"
panic-never = "0.1.0"
msp430-rt = "0.4.1"
critical-section = "1.0.0"
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }
msp430-atomic = "0.1.5"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = "s"
codegen-units = 1
debug = true

[profile.dev.package."*"]
opt-level = "z"

[package.metadata.docs.rs]
targets = ["msp430-none-elf"]
features = ["msp430fr2355"]
cargo-args = ["-Z", "build-std=core"]
